--- a/backend/src/pages/index.ejs
+++ b/backend/src/pages/index.ejs
@@ -7,8 +7,10 @@
         <link rel="stylesheet" href="http://localhost:5000/static/css/style.css">
     </head>
     <body>
-        <h1>Scythe Calculator</h1>
+        <p id="überschrift">Scythe Calculator</p>
+        <div id="content">
 
+        </div>
         <script src="http://localhost:5000/static/js/script.js"></script>
     </body>
 </html>
