--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -1,7 +1,21 @@
 body {
-    background-color:aliceblue;
+    background-image: url(wallpaper.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 
-h1 {
+#überschrift { /*Überschrift*/
+    font-size: 4em;
     text-align: center;
+    font-family: Papyrus;
+    width: 100%;
+    margin-bottom: 1%;
+}
+
+#content { /*heller Kasten*/
+    width: 55%;
+    height: 100%;
+    margin: auto;
+    background-color: rgb(252, 248, 244);
+    border-radius: 15px 15px 15px 15px;
 }
