--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html, body {
     height: 85%;
     margin: auto;
     background-color: rgb(252, 248, 244);
-    border-radius: 15px 15px 15px 15px;
+    border-radius: 15px;
 }
 
 #überschrift { /*Überschrift*/
@@ -23,44 +23,36 @@ html, body {
 }
 
 #actual-content { /*Inhalt*/
-    width: 90%;
-    height: 50%;
+    width: 100%;
+    height: 60%;
     margin: auto;
     display: grid;
     gap: 0.3em;
 }
 
-.fraction { /*grid Kästchen*/
-    display: inline-block;
-    font-family: Papyrus;
-    font-size: 3em;
-    text-align: center;
+.text { /*grid Kästchen*/
+    font-size: 1.8em;
     margin: auto;
 }
 
-.bild {
-    width: 60%;
-}
-
-#actual-content input[type=checkbox] {
-    display: none;
-}
-
-:checked + label {
-    background-color: #bca89f;
-    border-style: solid;
-    border-color: #4c3228;
+.input {
+    width: 120px;
+    font-size: 1em;
+    font-family: Papyrus;
+    text-align: center;
+    background-color: #ccbdb6;
+    border-color: #755143;
     border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
     line-height: 1.5em;
 }
 
-#weiter {
+#berechnen {
     width: 15%;
     height: 5.5%;
     font-size: 1.5em;
     font-family: Papyrus;
-    background-color: #bca89f;
-    border-color: #4c3228;
+    background-color: #ccbdb6;
+    border-color: #755143;
     border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
     line-height: 1.5em;
 }
@@ -69,11 +61,8 @@ html, body {
     #actual-content {
         grid-template-columns: 24.5% 24.5% 24.5% 24.5%;
     }
-    .fraction {
-        width: 85%;
-        height: 85%;
-    }
-    #weiter {
+
+    #berechnen {
         float: right;
         margin-right: 10%;
         margin-top: 3%;
