--- a/public/style.css
+++ b/public/style.css
@@ -44,6 +44,12 @@ body {
     line-height: 1.5em;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 @media (min-width: 1280px) { /*Desktops*/
     #actual-content {
         grid-template-columns: 24.5% 24.5% 24.5% 24.5%; /*teilt grid in 4 spalten*/
