--- a/style.css
+++ b/style.css
@@ -20,22 +20,28 @@ body {
     margin-bottom: 5%;
 }
 
+.highscore {
+    margin: 0;
+    width: 100%;
+}
+
+.text { /*grid Kästchen */
+    font-size: 2em;
+    text-align: center;
+    margin: 0;
+}
+
 #eingaben { /*Inhalt*/
     width: 90%;
     height: 50%;
     margin: auto;
     display: grid;
     gap: 0.3em;
-}
-
-.text { /*grid Kästchen */
-    font-size: 2em;
-    text-align: center;
+    justify-content: center;
 }
 
 #berechnen { /*berechnen button*/
     width: 80%;
-    height: 50%;
     font-size: 1.8em;
     font-family: Papyrus;
     background-color: #bca89f;
