--- a/style.css
+++ b/style.css
@@ -1,20 +1,19 @@
 body {
-    background-image: url(wallpaper.jpg);
-    background-repeat: no-repeat;
+    background-color: #64473b;
     background-size: 100%;
     font-family: Papyrus;
 }
 
 #content { /*heller Kasten*/
-    width: 55%;
-    height: 100%;
     margin: auto;
     background-color: rgb(252, 248, 244);
     border-radius: 15px 15px 15px 15px;
+    width: clamp(30vw, 80em, 90vw);
+    height: 100%;
 }
 
 #überschrift { /*Überschrift*/
-    font-size: 4em;
+    font-size: clamp(1.5em, 10vw, 4em);
     text-align: center;
     width: 100%;
     margin-bottom: 5%;
@@ -27,29 +26,43 @@ body {
 }
 
 .text { /*grid Kästchen */
-    font-size: 2em;
     text-align: center;
     margin: 0;
+    font-size: 2em;
 }
 
 #eingaben { /*Inhalt*/
     width: 90%;
-    height: 50%;
     margin: auto;
     display: grid;
     gap: 0.3em;
     justify-content: center;
+    height: 50%;
+    grid-template-columns: repeat(4, 24.5%); 
+}
+
+.input { /* input felder*/
+    width: 60%;
+    font-size: 1em;
+    font-family: Papyrus;
+    text-align: center;
+    background-color: #ccbdb6;
+    border-color: #4c3228;
+    border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
 }
 
 #berechnen { /*berechnen button*/
     width: 80%;
-    font-size: 1.8em;
     font-family: Papyrus;
     background-color: #bca89f;
     border-color: #64473b;
     border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
-    line-height: 1.5em;
     place-self: center;
+    font-size: clamp(1em, 3vw, 2em);
+    margin-right: 10%;
+    margin-top: 3%;
+    grid-row-start: 3;
+    grid-column-start: 4;
 }
 
 input::-webkit-outer-spin-button,
@@ -57,36 +70,9 @@ input::-webkit-inner-spin-button {
   appearance: none;
   margin: 0;
 }
-
-@media (min-width: 1280px) { /*Desktops*/
-    #eingaben {
-        grid-template-columns: 24.5% 24.5% 24.5% 24.5%; /*teilt grid in 4 spalten*/
+@media (min-width: 320px) and (max-width: 500px) {
+    #eingaben { /*Inhalt*/
+        grid-template-columns: repeat(2, 50%); 
+        grid-template-rows: repeat(4, 24.5%); 
     }
-
-    #berechnen {
-        margin-right: 10%;
-        margin-top: 3%;
-    }
-
-    .input { /* input felder*/
-        width: 60%;
-        font-family: Papyrus;
-        text-align: center;
-        font-size: 1em;
-        background-color: #ccbdb6;
-        border-color: #4c3228;
-        border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
-    }
-}
-
-@media (min-width: 480px) { /*breitere Smartphones*/
-
-}
-
-@media (min-width: 768px) { /*Tablets*/
-
-}
-
-@media (min-width: 320px) { /*schmalere Smartphones*/
-
 }
