--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #64473b;
+    background-color: #775b4f;
     background-size: 100%;
     font-family: Papyrus;
 }
@@ -8,7 +8,7 @@ body {
     margin: auto;
     background-color: rgb(252, 248, 244);
     border-radius: 15px 15px 15px 15px;
-    width: clamp(30vw, 80em, 90vw);
+    width: clamp(10vw, 95em, 95vw);
     height: 100%;
 }
 
@@ -28,7 +28,7 @@ body {
 .text { /*grid Kästchen */
     text-align: center;
     margin: 0;
-    font-size: 2em;
+    font-size: clamp(1em, 3vw, 3em);
 }
 
 #eingaben { /*Inhalt*/
@@ -37,8 +37,6 @@ body {
     display: grid;
     gap: 0.3em;
     justify-content: center;
-    height: 50%;
-    grid-template-columns: repeat(4, 24.5%); 
 }
 
 .input { /* input felder*/
@@ -74,5 +72,12 @@ input::-webkit-inner-spin-button {
     #eingaben { /*Inhalt*/
         grid-template-columns: repeat(2, 50%); 
         grid-template-rows: repeat(4, 24.5%); 
+        height: 100%;
+    }
+}
+@media (min-width: 1280px) { /*Desktops */
+    #eingaben {
+        height: 50%;
+        grid-template-columns: repeat(4, 24.5%);
     }
 }
