--- a/stylecopy.css
+++ b/stylecopy.css
@@ -37,6 +37,12 @@ body, html {
     justify-content: center;
 }
 
+.highscore {
+    margin: 0;
+    width: 100%;
+    font-size: 0.6em!important;
+}
+
 .input { /* input felder*/
     width: 60%;
     font-family: Papyrus;
